force-app/main/default/objects/Manager__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>(TODAY()  -  DOB__c) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>