force-app/main/default/objects/Manager__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <formula>Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Value</label>
    <type>Text</type>
</CustomField>