force-app/main/default/objects/Manager__c/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <label>No. of Employees</label>
    <summaryForeignKey>Employee__c.Manager__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>