force-app/main/default/objects/Manager__c/recordTypes/Indian_Clients.recordType-meta.xml
<RecordType>
    <fullName>Indian_Clients</fullName>
    <active>true</active>
    <label>Indian Clients</label>
</RecordType>