force-app/main/default/objects/Manager__c/recordTypes/Us_Clients.recordType-meta.xml
<RecordType>
    <fullName>Us_Clients</fullName>
    <active>true</active>
    <label>Us Clients</label>
</RecordType>