force-app/main/default/objects/Manager__c/validationRules/CheckDOB.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDOB</fullName>
    <active>true</active>
    <errorConditionFormula>DOB__c  =TODAY() || DOB__c&gt;  TODAY()</errorConditionFormula>
    <errorMessage>DOB can&apos; t be current date and the future date</errorMessage>
</ValidationRule>