force-app/main/default/objects/Manager__c/validationRules/CheckTargetDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckTargetDate</fullName>
    <active>false</active>
    <errorConditionFormula>Target_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Target Date Can&apos;t be past date</errorMessage>
</ValidationRule>